# flappybird

./: .gitignore  CMakeLists.txt  README.md
Assets/: config.json
src/: Bird.cpp  Bird.h  ConfigHelper.cpp  ConfigHelper.h  Game.cpp  Game.h  InputHandler.h  Pipe.cpp  Pipe.h  ScoreManager.cpp  ScoreManager.h  TTFManager.h  main.cpp
